[package]
name = "rs_socket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threadpool = "^1.8.1"
nix = "^0.26.2"
dotenv = "^0.15.0"
rand = "^0.8.5"
lazy_static = "^1.4.0"
log = "^0.4.17"
log4rs = "^1.2.0"
